--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   get: 4.6.6
   google_nav_bar: ^5.0.6
   flutter_localization: ^0.2.0
+  mask_text_input_formatter: ^2.9.0
   intl: ^0.18.1
   flutter: 
     sdk: flutter
